manifests/elasticsearch/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.elasticsearch: glob:6.*
  labels:
    app: elasticsearch
    stack: logging
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: elasticsearch
        stack: logging
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: affinity/elasticsearch
                operator: In
                values:
                - "true"
      serviceAccountName: elasticsearch
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.2.1
        imagePullPolicy: IfNotPresent
        # env:
        # - name: ES_JAVA_OPTS
        #   value: -Xms1024m -Xmx1024m
        #   # ES_MEM_LIMIT=2g
        #   # ES_JVM_HEAP=1024m
        ports:
        - containerPort: 9200
        resources:
          limits:
            # memory: "2147483648"
            memory: 3Gi
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/elasticsearch.yml
          subPath: elasticsearch.yml
        - name: data
          mountPath: /usr/share/elasticsearch/data
      # Allow non-root user to access PersistentVolume
      securityContext:
        fsGroup: 1000
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: elasticsearch
      # - name: data
      #   persistentVolumeClaim:
      #     claimName: elasticsearch
      - name: data
        hostPath:
          path: /srv/elasticsearch-data2
