manifests/elasticsearch/discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: elasticsearch-cluster
spec:
  clusterIP: None
  ports:
  - port: 9300
    protocol: TCP
    targetPort: 9300
  publishNotReadyAddresses: true
  selector:
    component: es
  sessionAffinity: None
  type: ClusterIP

# elasticsearch.yml:
#   discovery.zen:
#     minimum_master_nodes: ${NODE_QUORUM}
#     ping.unicast.hosts: elasticsearch-cluster
