manifests/elasticsearch/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: elasticsearch
  labels:
    app: elasticsearch
    stack: logging
  annotations:
    # ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: elasticsearch.codeformuenster.org
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch
          servicePort: 9200
  tls:
  - hosts:
    - elasticsearch.codeformuenster.org
    secretName: elasticsearch-tls
